deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  labels:
    app: do500-docs
    app.kubernetes.io/component: do500-docs
    app.kubernetes.io/instance: do500-docs
    app.kubernetes.io/name: do500-docs
  name: do500-docs
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: do500-docs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: do500-docs
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/jtudela-pipelines/do500-docs:TO_BE_REPLACED_BY_KUSTOMIZE
        imagePullPolicy: IfNotPresent
        name: do500-docs
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
