route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: do500-docs
    app.kubernetes.io/component: do500-docs
    app.kubernetes.io/instance: do500-docs
    app.kubernetes.io/name: do500-docs
  name: do500-docs
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: do500-docs
    weight: 100
  wildcardPolicy: None
